Deprecated URL constructor usages replaced